--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-spring": "^9.7.2",
+    "react-use-gesture": "^9.1.3",
     "viem": "^1.2.11",
     "wagmi": "^1.3.8"
   }
