--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "^13.4.9",
+    "@web3modal/ethereum": "^2.6.2",
+    "@web3modal/react": "^2.6.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
@@ -18,6 +20,8 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-spring": "^9.7.2",
-    "react-use-gesture": "^9.1.3"
+    "react-use-gesture": "^9.1.3",
+    "viem": "^1.2.11",
+    "wagmi": "^1.3.8"
   }
 }
