--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@web3modal/react": "^2.6.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "ethers": "^6.6.2",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
